modules/protocol/http/test/long_header_key-ref.txt
debug conn: opening connection 127.0.0.1:42077 -> 127.0.0.1:80
debug tcp: selecting http dissector on flow
debug grammar: parse error at byte 9021 for field name in header: token /[^:[:blank:]]+/ doesn't match
debug grammar: parse error context: ...
alert: id = = <>
	severity = low
	description = invalid http header
debug conn: dropping connection 127.0.0.1:42077 -> 127.0.0.1:80
debug lua: closing state
debug conn: <cleanup> connection
